--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
   left: 0;
   width: 460px;
   height: 635px;
-  background-image: url("pics/mike-davidson.jpg");
+  background: url("pics/mike-davidson.jpg");
   background-size: cover;
   background-position:center;
   background-repeat: no-repeat;
@@ -25,7 +25,7 @@
   padding: 0 40px;
 }
 
-.left a{
+#invision-logo{
   position: absolute;
   background-image: url('pics/invision-logo-white.png');
   background-size: 100%;
@@ -34,6 +34,7 @@
   height: 40px;
   top: 38px;
   left: 38px;
+  z-index: 1;
 }
 
 .left p{
@@ -117,17 +118,19 @@ li{
 
 /*****Right side of the page*****/
 .right{
+  display: table;
   float: right;
   width: calc(100% - 460px);
   height: 100%;
   padding-top: 100px;
   padding-bottom: 100px;
+  margin-top: 20px;
 }
 
 header{
   display: block;
   position: absolute;
-  margin-top:38px;
+  margin-top:58px;
   margin-bottom: 46px;
   margin-right: 38px;
   right: 0;
@@ -256,4 +259,42 @@ header a:hover{
 
 #continue:hover{
   box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+}
+
+@media screen and (max-width:1080px){
+  .left{
+    display: none;
+  }
+
+  #invision-logo{
+  background-image: url('pics/invision-logo-gray.png');
+  color: #5f697a
+  }
+
+
+  .right{
+    width: 100%;
+    margin: 0 auto;
+    float: none;
+  }
+}
+
+@media screen and (max-width:680px){
+  input{
+    width: 90%;
+  }
+
+  .right header span{
+    display: none;
+  }
+}
+
+@media screen and (max-width: 300px){
+  #invision-logo{
+    left: 5px;
+  }
+
+  .form-content h1{
+    margin-bottom: 100px;
+  }
 }
